tests/ui/typeck/output-type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/output-type-mismatch.rs:5:31
   |
LL | fn f() { }
   |       - help: consider changing f's return type: `-> isize`
LL |
LL | fn main() { let i: isize; i = f(); }
   |                    -----      ^^^ expected `isize`, found `()`
   |                    |
   |                    expected due to this type
   |
note: the function f is defined here
  --> $DIR/output-type-mismatch.rs:3:1
   |
LL | fn f() { }
   | ^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
