tests/ui/typeck/output-type-mismatch.rs
// error-pattern: mismatched types

fn f() { }

fn main() { let i: isize; i = f(); }
